refactor: Iteration 17 - More functional patterns
Streams:
- KafkaEventStore: StreamSupport.stream() for header extraction

DRY:
- LogImpl: Extract toSpanKind() helper (removes 5 duplicate switches)

Immutable collections:
- SimpleResponse: Map.of() instead of HashMap + unmodifiableMap

Optional chains:
- GatewayFactory: Optional.ofNullable().flatMap() for env lookup

Files changed: 6 (+ http-server module duplicates)